<resources>
    <string name="app_name">Different Class</string>
    <string-array name="artists_array">
        <item>ASA MOTO</item>
        <item>BEA1991</item>
        <item>EASTER</item>
        <item>HE4RTBROKEN DJ\'S AFTERPARTY</item>
        <item>KABLAM</item>
        <item>LE1F</item>
        <item>PRUIKDUIF</item>
        <item>SHENIQUA WORLD TOUR</item>
        <item>SYRACUSE</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="asa_moto_description">Asa Moto, with their vintage analogue beats, are one of the newest signees on the Deewee label, run by the Dewaele brothers.</string>
    <string name="bea1991_description">Young dutch pop chanteuse BEA1991 is about to break through internationally. She’s the protégé of Dev Hynes so watch this space.</string>
    <string name="easter_description">Creating down-tempo minimalistic synths and alienating supercooled voices singing about alien babies and twirling silver fish on the bathroom floor, Easter want to bring something bigger into this world, opening up the gates to a dark otherworldly realm.</string>
    <string name="he4rtbroken_description">Fans of the emo He4rtbroken nights will be glad to hear this collective is closing. Tissues available at the door.</string>
    <string name="kablam_description">Swedish-based music that ‘represents and imitates all articulate sounds and letters, and the voices and noise of beasts and birds’.</string>
    <string name="le1f_description">New York rapper and producer LE1F’s rapid-fire lyrics frequently confront his experience as an openly-gay hip-hop artist, which is sure to make this a must-see performance.</string>
    <string name="pruikduif_description">Pruikduif was formed as the result of a ping-pong jam session. Soon a bunch of songs emerged, mixing post-punk attitude with challenging pop tunes.</string>
    <string name="sheniqua_world_tour_description">Sheniqua equals a mélange of heavy beats, dark vocals, trance vibes, weird visuals and sexy dance moves.</string>
    <string name="syracuse_description">This Parisian electro duo promises highly danceable and aquatic synth-pop tunes. The ideal music to metaphorically float away on…</string>
    <string name="venue_address">Dok-Noord 5L, 9000 Gent, België</string>
    <string name="maps_button">View in Maps</string>
    <string name="member_button"> ► Become a member ◄ </string>
    <string name="subbacultcha_info_header">Want to know more about becoming a Subbacultcha member?</string>
    <string name="subbacultcha_join_big">► Join for €8 a month and receive: ◄</string>
    <string name="subbacultcha_membership">● A monthly membership card that grants you free access to all our listed events, including Different Class and The Sound Of The Belgian Underground;</string>
    <string name="subbacultcha_magazine">● A monthly magazine; a piece of art custom-made for you;</string>
    <string name="subbacultcha_canvas">● A canvas bag designed by artists we support;</string>
    <string name="subbacultcha_chance">● A chance to win weekly surprises by local artists through our newsletter (don’t forget to sign up for that one too!)</string>
    <string name="subbacultcha_introduce_big">► Introduce your friends and get a membership for free! ◄</string>
    <string name="subbacultcha_become">● Become a member;</string>
    <string name="subbacultcha_invite">● Invite your friends to become a member as well;</string>
    <string name="subbacultcha_email">● Send us an email with your name and those of your friends at memberships@subbacultcha.be and we’ll make sure you get a free membership for 1 month for each friend you bring along. (1 friend = 1 month free, 2 friends = 2 months free etc.)</string>
</resources>
